# jcrud

./: .gitignore  CMakeLists.txt
src/: Ambiente.hpp  CMakeLists.txt  Format.hpp  Modules.hpp  Sistema.hpp  main-test.cpp  main.cpp
src/api/: Mapping.hpp  Routes.hpp  RoutesV1.hpp  Session.hpp
src/api/mapping/: Mapping.hpp  MappingTraits.hpp
src/api/v1/: ApiErrorMsg.hpp  JwtSession.hpp
src/clients/americanas/: Modules.hpp  Sistema.hpp
src/clients/src/: Modules.hpp  Sistema.hpp
src/control/: ErrorMsg.hpp  InteractorModel.hpp
src/control/admin/: AdminController.hpp  AdminInteractor.hpp
src/control/estoque/: EstoqueController.hpp  EstoqueInteractor.hpp  EstoqueInteractorModel.hpp  EstoqueInteractorRepository.hpp
src/control/login/: LoginController.hpp  LoginInteractor.hpp  LoginInteractorModel.hpp  LoginInteractorRepository.hpp
src/control/produto/: ProdutoController.hpp  ProdutoInteractor.hpp  ProdutoInteractorModel.hpp  ProdutoInteractorRepository.hpp
src/database/: CompoundModel.hpp  DataClass.hpp  Database.hpp  Migration.hpp  Repository.hpp  SqliteDatabase.hpp
src/implementation/model/: SqliteDatabase.hpp
src/model/: CompoundModel.hpp  DataClass.hpp  Database.hpp  Migration.hpp  Repository.hpp
src/model/base/: Cnpj.hpp  Id.hpp  Rg.hpp  Token.hpp  cnpj.hpp  id.hpp  rg.hpp
src/model/cargo/: CargoModel.hpp  CargoRepository.hpp
src/model/cargoUsuario/: CargoUsuarioModel.hpp  CargoUsuarioRepository.hpp
src/model/cargo_usuario/: CargoUsuarioRepository.hpp
src/model/categoriaProduto/: CategoriaProdutoModel.hpp  CategoriaProdutoRepository.hpp
src/model/categoria_produto/: CategoriaProdutoModel.hpp  CategoriaProdutoRepository.hpp  ICategoriaProdutoRepository.hpp
src/model/estoque/: EstoqueModel.hpp  EstoqueRepository.hpp
src/model/filial/: FilialModel.hpp  FilialRepository.hpp
src/model/historicoEstoque/: HistoricoEstoqueModel.hpp  HistoricoEstoqueRepository.hpp
src/model/levelLog/: LevelLogModel.hpp  LevelLogRepository.hpp
src/model/level_log/: LevelLogModel.hpp  (+1 more)
src/modules/: Modules.hpp
src/strategy/: DecorateTitleStrategy.hpp
src/ui/: Core.hpp  Form.hpp  Input.hpp  Table.hpp
src/utils/: DataReader.hpp  DataWriter.hpp  FileHelper.hpp  Format.hpp  Log.hpp  Scope.hpp  State.hpp  StringLiteral.hpp
(+60 files in other folders)
